--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 	<title>Login</title>
 	<link rel="stylesheet" href="./styles/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
-	<!-- <script src="https://kit.fontawesome.com/a81368914c.js"></script> -->
+	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -40,6 +40,6 @@
             </form>
         </div>
     </div>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="./javascript/java.js"></script>
 </body>
 </html>
