--- a/login.html
+++ b/login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Login</title>
-	<link rel="stylesheet" href="./styles/styles.css">
+	<title>Animated Login Form</title>
+	<link rel="stylesheet" type="text/css" href="./styles/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,9 +12,8 @@
 		<div class="img">
 			<img src="./images/desktop.png">
 		</div>
-        
 		<div class="login-content">
-			<form action="login.html">
+			<form action="index.html">
 				<img src="./images/avatar.png">
 				<h2 class="title">Welcome</h2>
            		<div class="input-div one">
@@ -40,6 +39,6 @@
             </form>
         </div>
     </div>
-    <script type="text/javascript" src="./javascript/java.js"></script>
+    <script type="text/javascript" src="./javascript/login.js"></script>
 </body>
 </html>
