html File added

--- a/html/contact.html
+++ b/html/contact.html
@@ -7,13 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./fonts/icomoon/style.css">
+  <link rel="stylesheet" href="../fonts/icomoon/style.css">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="./styles/bootstrap.min.css">
+  <link rel="stylesheet" href="../styles/bootstrap.min.css">
 
   <!-- Style -->
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="../styles/style.css">
 
   <title>Contact</title>
 </head>
