--- a/html/login.html
+++ b/html/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>login</title>
-	<link rel="stylesheet" type="text/css" href="./styles/styles.css">
+	<link rel="stylesheet" type="text/css" href="../styles/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,11 +10,11 @@
 <body>
 	<div class="container">
 		<div class="img">
-			<img src="./images/desktop.png">
+			<img src="../images/desktop.png">
 		</div>
 		<div class="login-content">
 			<form action="index.html">
-				<img src="./images/avatar.png">
+				<img src="../images/avatar.png">
 				<h2 class="title">Welcome</h2>
            		<div class="input-div one">
            		   <div class="i">
@@ -39,6 +39,6 @@
             </form>
         </div>
     </div>
-    <script type="text/javascript" src="./javascript/login.js"></script>
+    <script type="text/javascript" src="../javascript/login.js"></script>
 </body>
 </html>
