--- a/html/index.html
+++ b/html/index.html
@@ -55,9 +55,9 @@ padding-right: 50px;
     
 
     <span class="set" style="padding-right: 0px;"> Follow us:</span>
-    <a href=""> <img src="./images/icons8_facebook_48px_4.png" alt=""></a>
-    <a href=""> <img src="./images/icons8_instagram_48px.png" alt=""></a>
-    <a href=""> <img src="./images/icons8_twitter_48px_1.png" alt=""></a>
+    <a href=""> <img src="../images/icons8_facebook_48px_4.png" alt=""></a>
+    <a href=""> <img src="../images/icons8_instagram_48px.png" alt=""></a>
+    <a href=""> <img src="../images/icons8_twitter_48px_1.png" alt=""></a>
      <span class="set" style="margin-left: 500px; padding-right: 90px;">  Log In </span>  
      <span class="set" style="padding-left: 10px;">  Create an Account </span>  
     
@@ -66,7 +66,7 @@ padding-right: 50px;
     <!-- <span class="set"><i class="fas fa-envelope mr-3"></i> Email: admissions@uet.edu.pk </span> -->
 
    
-    <span style="padding-right: 0px;" class="set"> Cart  </span><img src="./images/icons8_shopping_cart_32px.png" alt="">
+    <span style="padding-right: 0px;" class="set"> Cart  </span><img src="../images/icons8_shopping_cart_32px.png" alt="">
 </div>
 
     <!-- <ul >
