Picture in create an account resolved

--- a/html/createAccount.html
+++ b/html/createAccount.html
@@ -117,7 +117,7 @@
   <body>
     <div class="containers">
       <div class="left-container">
-        <img class="image" src="./images/reservation.png" alt="reservation" />
+        <img class="image" src="../images/reservation.png" alt="reservation" />
       </div>
       <div class="right-container">
         <form action="reservation.html">
