View Customers Table Addeed

--- a/html/createAccount.html
+++ b/html/createAccount.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap"
       rel="stylesheet"
     />
-    <title>Reservation</title>
+    <title>Create an Account</title>
     <style>
       * {
         padding: 0;
