--- a/html/index.html
+++ b/html/index.html
@@ -5,107 +5,14 @@
   <meta charset="UTF-8">
   <title>Navbar</title>
   <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: "Poppins", sans-serif;
-    }
-
-    button {
-      font-family: "Poppins", sans-serif;
-    }
-    .header{
-      background-color: #8366D7;
-      padding-bottom: 20px;
-    }
-
-    * {
-      padding: 0;
-      margin: 0;
-      box-sizing: border-box;
-    }
-
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-      padding-top: 20px;
-
-    }
-
-    .navbar ul {
-      display: flex;
-    }
-
-    .navbar li {
-      padding-top: 5px;
-      padding-right: 50px;
-      list-style: none;
-
-    }
-
-    .navbar li a {
-      text-decoration: none;
-      color: white;
-    }
-
-    .navbar li a:hover {
-      color: black;
-      transition: .4s;
-
-    }
-
-    .logo h1 a {
-      text-decoration: none;
-      color: white;
-      padding-left: 40px;
-      padding-right: 100px;
-    }
-    .logo h1 a:hover{
-      color: black;
-      transition: .4s;
-    }
-
-    .btn1 {
-      width: 100px;
-      border: none;
-      padding: 10px 10px 10px 10px;
-      border-radius: 10px;
-      background-color: white;
-      cursor: pointer;
-    }
-
-    .btn2 {
-      width: 100px;
-      border: none;
-      margin-right: 20px;
-      margin-left: 5px;
-      padding: 10px 10px 10px 10px;
-      border-radius: 10px;
-      background-color: black;
-      color: white;
-      cursor: pointer;
-    }
-
-    .btn1:hover {
-      background-color: black;
-      color: white;
-      transition: .4s;
-    }
-
-    .btn2:hover {
-      background-color: white;
-      color: black;
-      transition: .4s;
-    }
-    
-    
-  </style>
+  <link rel="stylesheet" href="../styles/main-menu.css">
 </head>
 
 <body>
   <div class="header">
     <nav class="navbar">
       <div class="logo">
-        <h1> <a href="./index.html">B & B</a></h1>
+        <h1> <a href="index.html">B & B</a></h1>
       </div>
       <ul class="navopt">
         <li><a href="">Business</a> </li>
@@ -118,6 +25,49 @@
         <button type="submit" class="btn2">Sign up</button>
       </div>
     </nav>
+  </div>
+
+  <div class="foot">
+    <div class="box5">
+      <h3>B & B</h3>
+      <p>
+        Serves variety of food from <br>
+        the continental cusines
+        to <br> the fast food item.
+      </p>
+
+      <div class="logo2">
+        <a href=""><img src="../images/facebook.png" alt=""></a>
+        <a href=""><img src="../images/twitter.png" alt=""></a>
+        <a href=""><img src="../images/instagram.png" alt=""></a>
+      </div>
+
+    </div>
+    <div class="box6">
+      <h4>B & B</h4>
+
+      <a href="">About</a> <br>
+      <a href="">Terms of use</a> <br>
+      <a href="">Privacy Policy</a> <br>
+
+    </div>
+    <div class="box7">
+      <h4>Support</h4>
+      <a href=""> Support Centre</a> <br>
+      <a href=""> Our Services</a> <br>
+      <a href=""> Quick Chat</a>
+    </div>
+    <div class="box8">
+      <h4>Contact</h4>
+      <a href=""> Contact Number</a> <br>
+      <a href=""> Location</a>
+    </div>
+
+  </div>
+  <div class="copyright">
+    <p>
+      Copyright © 2021 B & B Co.
+    </p>
   </div>
 </body>
 
