--- a/html/addemployee.html
+++ b/html/addemployee.html
@@ -43,6 +43,7 @@
             margin-bottom: -5px;
             padding: 10px 10px 15px 0px;
             font-size: 1.3rem;
+            text-align:center;
         }
 
         .contact {
